refactor: add @BeforeEach for fetcher